[package]
name = "genrl"
version = "0.0.1"
authors = ["Peter Jin <peterhaijin@gmail.com>"]

[lib]
name = "genrl"
path = "src/lib.rs"

#[[bin]]
#name = "train-cartpole"
#path = "examples/train-cartpole.rs"

[dependencies]
bit-set = "*"
rand = "*"
rustc-serialize = "*"
densearray = { path = "../libdensearray" }
#neuralops = { path = "../neuralops" }
operator = { path = "../liboperator" }
rng = { path = "../librng" }
sharedmem = { path = "../libsharedmem" }
