[package]
name = "genrl_examples"
version = "0.0.1"
authors = ["Peter Jin <peterhaijin@gmail.com>"]

[[bin]]
name = "train-cartpole"
path = "train-cartpole.rs"

[dependencies]
bit-set = "*"
rand = "*"
genrl = { path = ".." }
neuralops = { path = "../../neuralops" }
operator = { path = "../../liboperator" }
rng = { path = "../../librng" }
sharedmem = { path = "../../libsharedmem" }
