[package]
name = "genrl_examples"
version = "0.0.1"
authors = ["Peter Jin <peterhaijin@gmail.com>"]

[[bin]]
name = "train-cartpole"
path = "train-cartpole.rs"

[[bin]]
name = "train-cartpole-new"
path = "train-cartpole-new.rs"

[[bin]]
name = "train-cartpole-aac"
path = "train-cartpole-aac.rs"

[[bin]]
name = "train-cartpole-a3c"
path = "train-cartpole-a3c.rs"

[dependencies]
bit-set = "*"
rand = "*"
genrl = { path = ".." }
neuralops = { path = "../../neuralops" }
operator = { path = "../../liboperator" }
rng = { path = "../../librng" }
sharedmem = { path = "../../libsharedmem" }
